respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Customer_Quote__c.object
<CustomObject>
    <fields>
        <fullName>DO_Remarks__c</fullName>
        <label>DO Remarks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DO_Shipment_Pickup__c</fullName>
        <label>DO Shipment Pickup</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLoader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataLoader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateApproved__c</fullName>
        <formula>DATETIMEVALUE(Approved_Date_time01__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateApproved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Autorizado_FP_FO__c</fullName>
        <label>Date Autorizado FP/FO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Awaiting_Cost__c</fullName>
        <label>Date Awaiting Cost</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_Checked__c</fullName>
        <label>Date Invoice Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pricing_responded__c</fullName>
        <label>Date Pricing responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Send_Quote__c</fullName>
        <label>Date Send Quote</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Send_Request__c</fullName>
        <label>Date Send Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent_Awaiting_Response__c</fullName>
        <label>Date Sent Awaiting Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Shipped__c</fullName>
        <formula>Last_Shipment__r.Shipment_Create_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Time Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeclinedCount__c</fullName>
        <formula>if(ISPICKVAL( Quotation_Status__c,&quot;Quote Declined&quot;),1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeclinedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_By__c</fullName>
        <label>Declined By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Date_time__c</fullName>
        <label>Declined Date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_for2__c</fullName>
        <label>Declined for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TARIFA ALTA</fullName>
                </value>
                <value>
                    <fullName>INTINERARIOS</fullName>
                </value>
                <value>
                    <fullName>TARDANZA EN COTIZAR</fullName>
                </value>
                <value>
                    <fullName>CLIENTE FUERA DE WTP</fullName>
                    <label>FUERA DE WTP</label>
                </value>
                <value>
                    <fullName>SERVICIO/PROYECTO CANCELADO POR CLIENTE</fullName>
                </value>
                <value>
                    <fullName>NIVEL DE SERVICIO</fullName>
                </value>
                <value>
                    <fullName>FALTA DE SEGUIMIENTO A OPORTUNIDAD</fullName>
                </value>
                <value>
                    <fullName>FALTA DE CREDITO</fullName>
                </value>
                <value>
                    <fullName>FALTA DE DISPONIBILIDAD</fullName>
                </value>
                <value>
                    <fullName>DISPONIBILIDAD</fullName>
                </value>
                <value>
                    <fullName>CANCELACION DE CLIENTE</fullName>
                </value>
                <value>
                    <fullName>FALLA OPERATIVA</fullName>
                </value>
                <value>
                    <fullName>ERROR DE CAPTURA</fullName>
                </value>
                <value>
                    <fullName>CAMBIO</fullName>
                    <isActive>false</isActive>
                    <label>CAMBIO</label>
                </value>
                <value>
                    <fullName>CAMBIO DE FECHAS POR OPERACIONESS</fullName>
                    <isActive>false</isActive>
                    <label>CAMBIO DE FECHAS POR OPERACIONES</label>
                </value>
                <value>
                    <fullName>CANCELADO POR CLIENTE</fullName>
                    <isActive>false</isActive>
                    <label>CANCELADO POR CLIENTE</label>
                </value>
                <value>
                    <fullName>CIERRE DE SISTEMA</fullName>
                    <isActive>false</isActive>
                    <label>CIERRE DE SISTEMA</label>
                </value>
                <value>
                    <fullName>COTIZACION DE PROYECTO</fullName>
                    <isActive>false</isActive>
                    <label>COTIZACION DE PROYECTO</label>
                </value>
                <value>
                    <fullName>DECLINADO MASIVO POR SISTEMA</fullName>
                    <isActive>false</isActive>
                    <label>DECLINADO MASIVO POR SISTEMA</label>
                </value>
                <value>
                    <fullName>FALTA DE RESPUESTA DE VENTAS</fullName>
                    <isActive>false</isActive>
                    <label>FALTA DE RESPUESTA DE VENTAS</label>
                </value>
                <value>
                    <fullName>GIROS FUERA DE WTP</fullName>
                    <isActive>false</isActive>
                    <label>GIROS FUERA DE WTP</label>
                </value>
                <value>
                    <fullName>NO QUIERE CAMBIO PROVEEDOR</fullName>
                    <isActive>false</isActive>
                    <label>NO QUIERE CAMBIO PROVEEDOR</label>
                </value>
                <value>
                    <fullName>OTROS</fullName>
                    <isActive>false</isActive>
                    <label>OTROS</label>
                </value>
                <value>
                    <fullName>RUTA FUERA DE WTP</fullName>
                    <isActive>false</isActive>
                    <label>RUTA FUERA DE WTP</label>
                </value>
                <value>
                    <fullName>TIEMPO TRANSITO</fullName>
                    <isActive>false</isActive>
                    <label>TIEMPO TRANSITO</label>
                </value>
                <value>
                    <fullName>UNIDAD FUERA DE WTP</fullName>
                    <isActive>false</isActive>
                    <label>UNIDAD FUERA DE WTP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declined_for__c</fullName>
        <label>Declined for</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Cartage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Site of Discharge and Site of Load first</inlineHelpText>
        <label>Delivery Zone</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Discharge__c</valueField>
            </filterItems>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Load__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Delivery Drayage)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders_DeliveryCart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descanso_por_ruta__c</fullName>
        <formula>FLOOR( Horas_totales_en_ruta__c / 18 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descanso por ruta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Address__c</fullName>
        <label>Final Destination Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Location__c</fullName>
        <label>Destination Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Dias_sin_Confirmar__c</fullName>
        <formula>IF(ISPICKVAL(  Quotation_Status__c ,&quot;SENT AWAITING RESPONSE&quot;),
TEXT(TODAY() - DATEVALUE(Date_Pricing_responded__c)),&quot;NULL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias sin Confirmar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_Reparto_2__c</fullName>
        <label>Dirección de Reparto (2)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direccion_de_Reparto_3__c</fullName>
        <label>Dirección de Reparto (3)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direccion_de_Reparto_4__c</fullName>
        <label>Dirección de Reparto (4)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distancia_en_km2__c</fullName>
        <formula>DISTANCE( GEOLOCATION(  Origin_Location__Latitude__s  ,  Origin_Location__Longitude__s  ), GEOLOCATION(  Destination_Location__Latitude__s  ,  Destination_Location__Longitude__s  ) , &apos;km&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distancia en km</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drayage_SD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Arrastre corre a cargo de la Naviera</inlineHelpText>
        <label>Drayage (SD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETD_Time__c</fullName>
        <description>Fecha y hora ETD</description>
        <formula>DATETIMEVALUE(TEXT(ETD__c) + &quot; &quot; + LEFT(TEXT(Awaiting_load_time__c), 8)) + (5/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETD Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Account_Owner__c</fullName>
        <formula>Account_for__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Asistente_Vtas__c</fullName>
        <label>Email Asistente Vtas</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_ManagerSalEx__c</fullName>
        <label>Email Manager Sales Ex</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Route_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Route Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrada_Salida__c</fullName>
        <description>Precisa si los bienes o mercancías transportadas ingresan o salen del territorio nacional</description>
        <inlineHelpText>Precisa si los bienes o mercancías transportadas ingresan o salen del territorio nacional</inlineHelpText>
        <label>Entrada / Salida Mercancia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entrada</fullName>
                </value>
                <value>
                    <fullName>Salida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date_of_Production__c</fullName>
        <label>Estimated Delivery Date of Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ext_Pricing_Impk__c</fullName>
        <label>External Pricer Executive</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Final_Client_WS__c</fullName>
        <label>External Final Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Stage_Impak__c</fullName>
        <label>External Stage (Impak)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_AdminVtas__c</fullName>
        <inlineHelpText>[Exclusivo Admin Ventas]</inlineHelpText>
        <label>Facturado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Client_Pak__c</fullName>
        <label>Final Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Address_Latitude__c</fullName>
        <label>Final Destination Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Address_Longitude__c</fullName>
        <label>Final Destination Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Confirmation Pending</fullName>
                </value>
                <value>
                    <fullName>Deposit Pending</fullName>
                </value>
                <value>
                    <fullName>Deposit Made</fullName>
                </value>
                <value>
                    <fullName>Balance Pending</fullName>
                </value>
                <value>
                    <fullName>Balance Made</fullName>
                </value>
                <value>
                    <fullName>100% LC AT SIGN</fullName>
                </value>
                <value>
                    <fullName>TT 100% Advanced Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FolioResume__c</fullName>
        <formula>LEFT( Name , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_Declinado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox que muestra si el folio ya de declino mediante el flujo P2G Motivos Declinacion</description>
        <label>Folio Declinado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folio_MktAccount__c</fullName>
        <formula>Account_for__r.Folio_Mkt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio Mkt (Account for)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_Mkt_del__c</fullName>
        <label>Folio Cliente Mkt</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraccion_arancelaria__c</fullName>
        <description>Expresa la clave de la fracción arancelaria correspondiente a la descripción de los bienes o mercancías que se trasladan como importación o exportación, este dato se vuelve requerido cuando el atributo “EntradaSalidaMerc” contenga información. Debe ser conforme con el catálogo c_FraccionArancelaria publicado en el portal del SAT en Internet.</description>
        <inlineHelpText>Expresa la clave de la fracción arancelaria correspondiente a la descripción de los bienes o mercancías que se trasladan como importación o exportación, este dato se vuelve requerido cuando el atributo “EntradaSalidaMerc” contenga información. Debe ser conforme con el catálogo c_FraccionArancelaria publicado en el portal del SAT en Internet.</inlineHelpText>
        <label>Fraccion arancelaria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Mode__c</fullName>
        <label>Freight Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Sea</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                    <default>true</default>
                    <label>Road</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gasto_Operativo_Prod1__c</fullName>
        <formula>IF( FolioResume__c = &quot;FN&quot;,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 972,1087),
IF( FolioResume__c = &quot;FI&quot;&amp;&amp; ISPICKVAL(Service_Type__c,&quot;FTL&quot;),
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 805,701),
IF( FolioResume__c = &quot;FI&quot;&amp;&amp; ISPICKVAL(Service_Type__c,&quot;LTL&quot;),
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 823,810),
IF( FolioResume__c = &quot;A-&quot; &amp;&amp; ISPICKVAL(Service_Type__c,&quot;CARGA&quot;) ,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;) , 1831,2423),
IF( FolioResume__c = &quot;A-&quot; &amp;&amp; ISPICKVAL(Service_Type__c,&quot;PAQUETERIA&quot;) ,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;) , 768,804),
IF( FolioResume__c = &quot;M-&quot; &amp;&amp; ISPICKVAL(Service_Type__c,&quot;FCL&quot;),
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 1689,2741),
IF( FolioResume__c = &quot;M-&quot; &amp;&amp; ISPICKVAL(Service_Type__c,&quot;LCL&quot;),
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 483,3196),
IF( FolioResume__c = &quot;PT&quot; ,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 1353,1174),
NULL)
)))))))</formula>
        <label>Gasto Operativo productos 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gasto_Operativo_Prod2__c</fullName>
        <formula>IF( FolioResume__c = &quot;R-&quot;,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;), 749,719),
IF( FolioResume__c = &quot;W-&quot;,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;),2620,2507),
IF( FolioResume__c = &quot;AW&quot;,
IF( ISPICKVAL(Account_for__r.Sitprov_cta__c,&quot;Tarifario&quot;),2560,3754),
NULL)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gasto Operativo productos 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guia_Consolidado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guia Consolidado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazardous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazmat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazmat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horas_totales_en_ruta__c</fullName>
        <formula>Kms__c/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas totales en ruta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hrs_sin_Aprobar__c</fullName>
        <formula>IF(ISPICKVAL(  Quotation_Status__c ,&quot;SENT AWAITING RESPONSE&quot;),TODAY() - DATEVALUE(Date_Pricing_responded__c),0)*8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs sin Aprobar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Destino__c</fullName>
        <formula>&quot;DE&quot; &amp; TRIM(RIGHT(Name, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Destino</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Origen__c</fullName>
        <formula>&quot;OR&quot; &amp; TRIM(RIGHT(Name, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Origen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEShipment_Projection__c</fullName>
        <inlineHelpText>Proyeccion de Embarques Mensual</inlineHelpText>
        <label>Shipment Projection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IHC_Charges__c</fullName>
        <label>IHC (Inland Haulage Charges)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL TRUCK</fullName>
                </value>
                <value>
                    <fullName>RAIL TRUCK</fullName>
                </value>
                <value>
                    <fullName>TRUCK-PTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMPAK__c</fullName>
        <label>Padron Impak</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <formula>Total_Services_Sell_Amount__c *0.16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_Import_Export_Origin__c</fullName>
        <label>Id Import-Export Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Owner__c</fullName>
        <formula>Account_for__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impak_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impak Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incoterm_Place__c</fullName>
        <label>Incoterm Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Origin_Address_Latitude__c</fullName>
        <label>Initial Origin Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Origin_Address_Longitude__c</fullName>
        <label>Initial Origin Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <formula>(Invoice_Value__c  /  Merch_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Insurance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_freq__c</fullName>
        <formula>IF( Account_for__r.Insurance_Resume__c &gt;0,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ya ha comprado Seguro anteriormente!!</inlineHelpText>
        <label>Seguro Frecuente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Local__c</fullName>
        <description>Specifies whether Account for is international or local. Information obtained from account record.</description>
        <formula>TEXT(Account_for__r.International_Local__c)</formula>
        <inlineHelpText>Specify Account for (Record Type) first. Edited from Account setup</inlineHelpText>
        <label>International/Local</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Value__c</fullName>
        <label>Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced_Correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced Correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Items_Margin__c</fullName>
        <description>&quot;SUM Profit&quot; / &quot;SUM Sell Origin Amount&quot;</description>
        <formula>SUM_Profit__c / SUM_Sell_Origin_Amount_number__c</formula>
        <inlineHelpText>&quot;SUM Profit&quot; / &quot;SUM Sell Origin Amount&quot;</inlineHelpText>
        <label>Items Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kms__c</fullName>
        <label>Kms</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Shipment_Delivery_Date__c</fullName>
        <label>Last Shipment (Delivery Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Load_Zone__c</fullName>
        <label>Load Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_sales_executive__c</fullName>
        <formula>CreatedBy.Manager.FirstName &amp; &quot; &quot; &amp; CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager sales executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margen_Bruto_WCA__c</fullName>
        <formula>IF(Total_Services_Order_Amount_NoIMP__c = 0,
0,
( Total_Services_Order_Amount_NoIMP__c - Total_Services_Std_Buy_Amount_NoIMP__c - Calc_Gasto_Op_Dir__c ) / Total_Services_Order_Amount_NoIMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen Bruto WCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margen_Bruto__c</fullName>
        <formula>(Total_Services_Lines_Order_Amount__c - Total_Services_Std_Buy_Amount__c ) / Total_Services_Lines_Order_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen Bruto %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margen_Operativo_2__c</fullName>
        <formula>IF(Total_Services_Order_Amount_NoIMP__c = 0, 
0, 
( Total_Services_Order_Amount_NoIMP__c  - Total_Services_Std_Buy_Amount_NoIMP__c -   Calc_Gasto_Op_Wca__c ) / Total_Services_Order_Amount_NoIMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen Operativo WCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margen_Operativo__c</fullName>
        <formula>IF(Total_Services_Order_Amount_NoIMP__c = 0, 
0, 
( Total_Services_Order_Amount_NoIMP__c  - Total_Services_Std_Buy_Amount_NoIMP__c -  Calc_Gasto_Op_Dir__c  ) / Total_Services_Order_Amount_NoIMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen Operativo %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_at_Destination_by_Default__c</fullName>
        <label>Margin at Destination by Default</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketplace_Auction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Rates Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Deliveries__c</fullName>
        <label>Max Deliveries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merch_Value__c</fullName>
        <label>Merchandise Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchandise_Insurance__c</fullName>
        <inlineHelpText>Requerid for Impak</inlineHelpText>
        <label>Merchandise Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seguro AON</fullName>
                </value>
                <value>
                    <fullName>Seguro Paqueteria</fullName>
                </value>
                <value>
                    <fullName>Seguro Consolidado</fullName>
                </value>
                <value>
                    <fullName>NO REQUIERE</fullName>
                    <default>true</default>
                    <label>NO REQUIERE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandise_has_being_paid__c</fullName>
        <inlineHelpText>Requerid for Impak</inlineHelpText>
        <label>Merchandise has being paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta_Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta Comercial</label>
        <referenceTo>Metas__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mkt_Source__c</fullName>
        <label>Customer Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MKT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>Animation showing mode of Transport dependent on option entered in &quot;Freight Mode&quot;</description>
        <formula>IF(TEXT(Freight_Mode__c) = &apos;Sea&apos;, IMAGE(&apos;/img/icon/custom51_100/ship32.png&apos;, &apos;Sea&apos;), IF(TEXT(Freight_Mode__c) = &apos;Air&apos;, IMAGE(&apos;/img/icon/plane32.png&apos;, &apos;Air&apos;), IF(TEXT(Freight_Mode__c) = &apos;Road&apos;, IMAGE(&apos;/img/icon/custom51_100/truck32.png&apos;, &apos;Road&apos;), IF( TEXT(Freight_Mode__c) = &apos;Rail&apos;, IMAGE(&apos;/img/icon/train32.png&apos;, &apos;Rail&apos;), IF( TEXT(Freight_Mode__c) = &apos;Multimodal&apos;, IMAGE(&apos;/img/icon/custom51_100/ship32.png&apos;, &apos;Multimodal&apos;)&amp; &quot; &quot; &amp; IMAGE(&apos;/img/icon/train32.png&apos;, &apos;Multimodal&apos;) ,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>